---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var cmx : char(256)\n\nproc __(var _e00 : string(*))\n_e00 := cmx % [not captured by ctc]\nend __\n"
---
"cmx"@(FileId(1), 4..7) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"__"@(FileId(1), 26..28) [Subprogram(Procedure)]: procedure ( pass(var ref) string_n Any, ) -> void
"_e00"@(FileId(1), 33..37) [Param(Reference(Var), No)]: string_n Any
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 56..58): mismatched types
| note for (FileId(1), 59..62): this is of type `char(256)`
| note for (FileId(1), 51..55): this is of type `string(*)`
| info: `char(256)` is not assignable into `string(*)`
